cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp)
add_executable(PAT_1153 PAT_1153.cpp )
add_executable(leetcode leetcode_test.cpp )
add_executable(PAT_1023 PAT_1023.cpp)
add_executable(PAT_1024 PAT_1024.cpp)
add_executable(PAT_1025 PAT_1025.cpp)
add_executable(PAT_1026 PAT_1026.cpp)
add_executable(leetcode_572 leetcode_572.cpp)

